# edge-bench

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run_server.sh
.github/workflows/: docker-image.yml
agent/: benchmark_eccv_models.py  benchmark_full.py  benchmark_tflite.py  config.py  edgebench-agent.service  executor.py  install.sh  main.py  metrics.py  requirements.txt  result_cache.py
data/scripts/: 9.9_run_edgebench.py
models/: .gitkeep
requirements/: agent.txt  server.txt
scripts/: benchmark_batch.py  benchmark_eccv_models.py  convert_edgetpu.py  convert_pipeline.py
server/: __init__.py  main.py
server/api/: dependencies.py  devices.py  experiments.py  files.py  results.py  schedules.py  scripts.py  settings.py
server/core/: config.py  models.py  queue.py  scheduler.py  ws_manager.py
server/db/: database.py
server/integrations/: __init__.py  mlflow_logger.py
server/static/css/: style.css
server/static/js/: i18n.js
server/templates/: base.html  benchmark.html  compare.html  dependencies.html  devices.html  experiment_detail.html  experiments.html  index.html  models.html  new_experiment.html  results.html  schedules.html  scripts.html  settings.html
tests/: conftest.py  test_dependencies_api.py  test_devices_api.py  test_experiments_api.py  test_files_api.py  test_queue_scheduler_integration.py  test_results_api.py  test_schedules_api.py  test_settings_api.py  test_ws_manager.py
