[project]
name = "edge-bench"
version = "0.1.0"
description = "Remote ML benchmarking system for Raspberry Pi + Google Coral Edge TPU"
authors = [
    {name = "edge-bench contributors"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi (>=0.135.3,<0.136.0)",
    "uvicorn[standard] (>=0.44.0,<0.45.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "python-multipart (>=0.0.24,<0.0.25)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "aiofiles (>=25.1.0,<26.0.0)",
    "websockets (>=16.0,<17.0)",
    "psutil (>=7.2.2,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[dependency-groups]
dev = [
    "ruff (>=0.14.14,<0.15.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]

# =============================================================
# Ruff — single source of truth
# =============================================================

[tool.ruff]
line-length = 88
target-version = "py312"
fix = true

# -------------------------------------------------------------
# Lint rules
# -------------------------------------------------------------
[tool.ruff.lint]
select = [
  "E",
  "W",
  "F",
  "B",
  "C4",
  "UP",
  "I",
  "C90",
]

ignore = [
  "E501",
  "B008",
  "B904",
  "Q000", # conflicts with ruff-format
  "Q003", # conflicts with ruff-format
  "B905",
]

[tool.ruff.lint.mccabe]
max-complexity = 25

# -------------------------------------------------------------
# Import sorting (ex-isort)
# -------------------------------------------------------------
[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

# -------------------------------------------------------------
# Formatter (ex-Black)
# -------------------------------------------------------------
[tool.ruff.format]
quote-style = "single"
indent-style = "space"
line-ending = "lf"

# -------------------------------------------------------------
# Per-file ignores
# -------------------------------------------------------------
# [tool.ruff.lint.per-file-ignores]
# "*/migrations/*.py" = ["E501", "I001"]
# "config/settings.py" = ["F401"]
[tool.poetry]
package-mode = false
